--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <main class="main">
             <h1>Full content</h1>
         </main>
+        <footer class="footer">
+            <h1>footer</h1>
+        </footer>
     </body>
 </html>
