--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>Index page</title>
-        <link rel="stylesheet" href="css/main.css" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Сайт</title>
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
         <header class="header">
-            <h1>header</h1>
+            ШАПКА САЙТА
         </header>
-        </div>
+
         <main class="main">
-            <h1>Full content</h1>
+            КОНТЕНТ
         </main>
-        <footer class="footer">
-            <h1>footer</h1>
-        </footer>
     </body>
 </html>
