--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
 
         <main class="main">
-            КОНТЕНТ
+            КОНТЕНТ СТРАНИЦЫ
         </main>
 
         <footer class="footer">
